# micronfig

./: .directory  Cargo.toml  README.md
.devcontainer/: devcontainer.json
examples/e01_the_cave/: Cargo.toml
examples/e01_the_cave/src/: main.rs
examples/e02_quick_math/: Cargo.toml
examples/e02_quick_math/src/: main.rs
examples/e03_order_a_pizza/: Cargo.toml
examples/e03_order_a_pizza/src/: main.rs
micronfig/: Cargo.toml
micronfig/src/: cache.rs  envdot.rs  envfiles.rs  envvars.rs  lib.rs  testing.rs
micronfig_macros/: Cargo.toml
micronfig_macros/src/: lib.rs
micronfig_macros/tests/: config.rs  tests.rs  trybuild.rs
micronfig_macros/tests/configs/: 01-three-strings.rs  02-zero-strings.rs
micronfig_macros/tests/sources/: chain_single_down.rs  chain_single_up.rs  empty.rs  example_angybot.rs  example_distributedarcade.rs  example_patchedporobot.rs  from_single_custom.rs  parse_single_custom.rs  parse_single_i64.rs  parse_single_ipaddr.rs  parse_single_pathbuf.rs  parse_single_u64.rs  parse_single_u64_optional.rs  string_multi_explicit.rs  string_multi_implicit.rs  string_multi_mixed.rs  string_single_explicit.rs  string_single_implicit.rs  tryfrom_single_custom.rs  wrong_conversion_longfatarrow.rs  wrong_conversion_longfatarrow.stderr  wrong_conversion_longthinarrow.rs  wrong_conversion_longthinarrow.stderr  wrong_conversion_tildearrow.rs  wrong_conversion_tildearrow.stderr  wrong_conversion_trait_from.rs  wrong_conversion_trait_from.stderr  wrong_conversion_trait_fromstr.rs  wrong_conversion_trait_fromstr.stderr  wrong_conversion_trait_tryfrom.rs  wrong_conversion_trait_tryfrom.stderr  wrong_nonsense_1.rs  wrong_nonsense_1.stderr  wrong_nonsense_2.rs  wrong_nonsense_2.stderr  wrong_nonsense_3.rs  wrong_nonsense_3.stderr  wrong_start.rs  wrong_start.stderr  wrong_syntax_colon.rs  (+7 more)
src/: any.rs  cache.rs  file.rs  lib.rs  var.rs
src/handle/: mod.rs
src/macros/: mod.rs
src/multi/: mod.rs
src/single/: envfiles.rs  envvars.rs  mod.rs
src/sources/: envdot.rs  envfiles.rs  envvars.rs  mod.rs
src/testing/: mod.rs
tests/integration/: macros.rs
