[package]
name = "micronfig_macros"
version = "1.0.0"
authors = ["Stefano Pigozzi <me@steffo.eu>"]
edition = "2021"
description = "Macros for micronfig"
repository = "https://github.com/Steffo99/micronfig/"
license = "MIT OR Apache-2.0"
keywords = ["twelve-factor-app", "configuration", "config", "environment", "envvar"]
categories = ["config"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"

[dev-dependencies]
micronfig = { version = "1.0.0", path = "../micronfig" }
trybuild = "1.0.87"

[lib]
proc-macro = true

[lints.clippy]
tabs-in-doc-comments = "allow"
